Add favicon shortcode

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -49,6 +49,8 @@ stylesheets:
   {%- if thumbnail -%}
     <meta name="twitter:image" content="{{ thumbnail }}">
   {%- endif -%}
+  {%- comment -%}Favicons{%- endcomment -%}
+  {% favicon '/assets/images/favicon/favicon.png' %}
 </head>
 <body>
   {%- comment -%}Add common layout components here (e.g., site nav/footer){%- endcomment -%}
