Fix stylelint config to comply with stylelint 14

--- a/src/assets/styles/partials/_breakpoints.scss
+++ b/src/assets/styles/partials/_breakpoints.scss
@@ -1,4 +1,4 @@
-/* Usage @media screen and (min-width: bp) */
+// Usage @media screen and (min-width: bp)
 $media-breakpoints: (
   mobile-min: 360px,
   mobile: 400px,
