--- a/src/assets/styles/partials/_mixins.scss
+++ b/src/assets/styles/partials/_mixins.scss
@@ -1,4 +1,4 @@
-@import './breakpoints';
+@import "./breakpoints";
 
 @mixin headings {
   :is(h1,h2,h3,h4,h5,h6) {
@@ -8,42 +8,48 @@
 
 // Breakpoint mixins
 @mixin mobile {
-  $bp: map-get($media-breakpoints, mobile);
+  $bp: map.get($media-breakpoints, mobile);
+
   @media screen and (min-width: $bp) {
     @content;
   }
 }
 
 @mixin mobile-lg {
-  $bp: map-get($media-breakpoints, mobile-lg);
+  $bp: map.get($media-breakpoints, mobile-lg);
+
   @media screen and (min-width: $bp) {
     @content;
   }
 }
 
 @mixin tablet-sm {
-  $bp: map-get($media-breakpoints, tablet-sm);
+  $bp: map.get($media-breakpoints, tablet-sm);
+
   @media screen and (min-width: $bp) {
     @content;
   }
 }
 
 @mixin tablet {
-  $bp: map-get($media-breakpoints, tablet);
+  $bp: map.get($media-breakpoints, tablet);
+
   @media screen and (min-width: $bp) {
     @content;
   }
 }
 
 @mixin desktop {
-  $bp: map-get($media-breakpoints, desktop);
+  $bp: map.get($media-breakpoints, desktop);
+
   @media screen and (min-width: $bp) {
     @content;
   }
 }
 
 @mixin desktop-lg {
-  $bp: map-get($media-breakpoints, desktop-lg);
+  $bp: map.get($media-breakpoints, desktop-lg);
+
   @media screen and (min-width: $bp) {
     @content;
   }
