--- a/src/assets/styles/partials/global/_variables.scss
+++ b/src/assets/styles/partials/global/_variables.scss
@@ -1,3 +1,2 @@
-/* Add custom properties here for your design tokens */
-html {
-}
+// Add custom properties (--var) here for your design tokens.
+// Alternatively, you can use Sass variables, in which case you don't want to import this into main.scss.
