Set good defaults for stylelint

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,2 +1,2 @@
-@import 'partials/global/reset';
-@import 'partials/global/variables';
+@import "partials/global/reset";
+@import "partials/global/variables";
