--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -1,51 +1,49 @@
 @use "sass:map";
-@import "./breakpoints";
+@use "sass:math";
+@use "./tokens" as *;
 
-@mixin headings {
-  :is(h1,h2,h3,h4,h5,h6) {
+// Breakpoint mixins
+
+@mixin breakpoint($name) {
+  $bp: map.get($tokens, "breakpoints", $name);
+  $bp: math.div($bp, 16px) * 1em;
+  @media screen and (min-width: $bp) {
     @content;
   }
 }
 
-// Breakpoint mixins
 @mixin mobile {
-  $bp: map.get($media-breakpoints, mobile);
-  @media screen and (min-width: $bp) {
+  @include breakpoint("mobile") {
     @content;
   }
 }
 
 @mixin mobile-lg {
-  $bp: map.get($media-breakpoints, mobile-lg);
-  @media screen and (min-width: $bp) {
+  @include breakpoint("mobile-lg") {
     @content;
   }
 }
 
 @mixin tablet-sm {
-  $bp: map.get($media-breakpoints, tablet-sm);
-  @media screen and (min-width: $bp) {
+  @include breakpoint("tablet-sm") {
     @content;
   }
 }
 
 @mixin tablet {
-  $bp: map.get($media-breakpoints, tablet);
-  @media screen and (min-width: $bp) {
+  @include breakpoint("tablet") {
     @content;
   }
 }
 
 @mixin desktop {
-  $bp: map.get($media-breakpoints, desktop);
-  @media screen and (min-width: $bp) {
+  @include breakpoint("desktop") {
     @content;
   }
 }
 
 @mixin desktop-lg {
-  $bp: map.get($media-breakpoints, desktop-lg);
-  @media screen and (min-width: $bp) {
+  @include breakpoint("desktop-lg") {
     @content;
   }
 }
